--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<div *ngIf="seccion.logado">
+<div *ngIf="serSession.logado">
     <ion-menu [content]="content">
         <ion-header>
             <ion-toolbar>
